k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:15

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: postgres-pvc
